/* SPDX-License-Identifier: AGPL-3.0-or-later */
/* This file is part of yagips.

Â©2024 Alex Pensinger (ArcticLuma113)

This program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.

This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.

You should have received a copy of the GNU Affero General Public License along with this program. If not, see <https://www.gnu.org/licenses/>. */

syntax = "proto3";

package proto;

message GetPlayerTokenReq {
    uint32 account_type = 1;
    string account_uid = 2;
    string account_token = 3;
    string account_ext = 4;
    uint32 uid = 5;
    bool is_guest = 6;
    uint32 platform_type = 7;
    uint32 cloud_client_ip = 8;
    string online_id = 9;
    string psn_region = 10;
    uint32 channel_id = 11;
    uint32 sub_channel_id = 12;
    string country_code = 13;
    
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 101;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }
}

message GetPlayerTokenRsp {
    int32 retcode = 1;
    string msg = 2;
    uint32 uid = 3;
    string token = 4;
    uint32 black_uid_end_time = 5;
    uint32 account_type = 6;
    string account_uid = 7;
    bool is_proficient_player = 8;
    string secret_key = 9;
    uint32 gm_uid = 10;
    uint64 secret_key_seed = 11;
    bytes security_cmd_buffer = 12;
    uint32 platform_type = 13;
    bytes extra_bin_data = 14;
    bool is_guest = 15;
    uint32 channel_id = 16;
    uint32 sub_channel_id = 17;
    uint32 tag = 18;
    string country_code = 19;
    bool is_login_white_list = 20;
    
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 102;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }
}
